fix: landscape orientation not showing

--- a/src/App.scss
+++ b/src/App.scss
@@ -188,3 +188,9 @@ footer{
     
     }
 }
+
+@media (orientation: landscape) {
+    body {
+      overflow-y: auto;
+    }
+  }
